--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   publish = "dist"
-  command = "npm i @marp-team/marp-cli -g && marp --html"
+  command = "npm i @marp-team/marp-cli -g && marp *md --html"
